--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,24 +4,24 @@ on: push
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: [3.5, 3.6, 3.7]
+#    strategy:
+#      max-parallel: 4
+#      matrix:
+#        python-version: [3.5, 3.6, 3.7]
 
     steps:
       - uses: actions/checkout@v1
         with:
           path: molecule_demo
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python #${{ matrix.python-version }}
         uses: actions/setup-python@v1
-        with:
-          python-version: ${{ matrix.python-version }}
+#        with:
+#          python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
           sudo apt install docker
           python3 -m pip install --upgrade pip
-          python3 -m pip install -r requirements.txt
+          python3 -m pip install -r ansible molecule
       - name: Test with molecule
         run: |
           molecule test
