--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           sudo apt install docker
           python3 -m pip install --upgrade pip
-          python3 -m pip install -r ansible molecule
+          python3 -m pip install ansible molecule
       - name: Test with molecule
         run: |
           molecule test
